
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;
typedef int b ;


 int snprintf (char*,int,char*,int const) ;
 int strlcat (char*,char*,size_t) ;
 char* xcalloc (int,size_t) ;
 char* xstrdup (char*) ;

char *
tohex(const void *vp, size_t l)
{
 const u_char *p = (const u_char *)vp;
 char b[3], *r;
 size_t i, hl;

 if (l > 65536)
  return xstrdup("tohex: length > 65536");

 hl = l * 2 + 1;
 r = xcalloc(1, hl);
 for (i = 0; i < l; i++) {
  snprintf(b, sizeof(b), "%02x", p[i]);
  strlcat(r, b, hl);
 }
 return (r);
}
